--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,1 +1,35 @@
-{}
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "checkJs": false,
+    "jsx": "react",
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "include": [
+    "www/js/**/*",
+    "www/**/*.html"
+  ],
+  "exclude": [
+    "node_modules",
+    "platforms",
+    "plugins",
+    "build",
+    "dist"
+  ]
+}
