--- a/package.json
+++ b/package.json
@@ -1,30 +1,82 @@
 {
   "name": "patitas-felices-app",
-  "displayName": "Patitas Felices",
   "version": "1.0.0",
-  "description": "Aplicación móvil para la gestión de la clínica veterinaria Patitas Felices",
-  "main": "index.js",
+  "description": "Aplicación móvil híbrida para la Clínica Veterinaria Patitas Felices",
+  "main": "www/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cordova build android",
-    "run": "cordova run android",
-    "serve": "cordova serve"
+    "start": "cordova serve",
+    "build": "cordova build",
+    "build:android": "cordova build android",
+    "build:ios": "cordova build ios",
+    "build:browser": "cordova build browser",
+    "emulate:android": "cordova emulate android",
+    "emulate:ios": "cordova emulate ios",
+    "run:android": "cordova run android",
+    "run:ios": "cordova run ios",
+    "run:browser": "cordova run browser",
+    "clean": "cordova clean",
+    "prepare": "cordova prepare",
+    "platform:add:android": "cordova platform add android",
+    "platform:add:ios": "cordova platform add ios",
+    "platform:add:browser": "cordova platform add browser",
+    "plugin:add": "cordova plugin add",
+    "plugin:remove": "cordova plugin remove",
+    "plugin:list": "cordova plugin list",
+    "platform:list": "cordova platform list",
+    "info": "cordova info",
+    "requirements": "cordova requirements",
+    "serve": "cordova serve --port 8000",
+    "dev": "cordova serve --port 8000 --live-reload",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
-    "veterinaria",
-    "mascotas",
-    "clinica",
     "cordova",
-    "mobile"
+    "mobile",
+    "veterinaria",
+    "clinica",
+    "mascotas",
+    "citas",
+    "historiales"
   ],
-  "author": "Clínica Veterinaria Patitas Felices",
+  "author": "Juan de Dios Valero Casillas",
   "license": "ISC",
+  "devDependencies": {
+    "cordova": "^12.0.0",
+    "cordova-android": "^12.0.0",
+    "cordova-browser": "^7.0.0",
+    "cordova-ios": "^7.0.0",
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-file": "^8.0.0",
+    "cordova-plugin-network-information": "^3.0.0",
+    "cordova-plugin-splashscreen": "^6.0.1",
+    "cordova-plugin-statusbar": "^3.0.0",
+    "cordova-plugin-whitelist": "^1.3.5"
+  },
+  "dependencies": {},
   "cordova": {
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {}
+    },
     "platforms": [
+      "browser",
       "android"
     ]
   },
-  "devDependencies": {
-    "cordova-android": "^14.0.1"
-  }
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tu-usuario/patitas-felices-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tu-usuario/patitas-felices-app/issues"
+  },
+  "homepage": "https://github.com/tu-usuario/patitas-felices-app#readme"
 }
